Modified podcast data

--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,30 @@
 actors:
-  alice:
-    image_url: /images/actors/alice.png
-    name: alice
-    url: http://sns.example.com/alice
-  bob:
-    image_url: /images/actors/bob.png
-    name: bob
-    url: http://sns.example.com/bob
-author: alice
-description: Example description
-description_long: Example long description
-email: info@example.com
+  konifar:
+    image_url: /images/actors/konifar.jpg
+    name: konifar
+    url: https://twitter.com/konifar
+  yome:
+    image_url: /images/actors/yome.png
+    name: yome
+    url: https://twitter.com/konifar
+author: konifar
+description: konifarとyome氏のゆるいpodcast
+description_long: エンジニアのkonifarと専業主婦のyome氏が夫婦生活や仕事の話をゆるく話すpodcastです。
+email: yahpeycoy0403@gmail.com
 exclude:
   - Gemfile
   - Gemfile.lock
   - LICENSE.txt
   - README.md
   - vendor
-hashtag: examplehashtag
+hashtag: yomefm
 itunes_podcast_url:
-keywords: comma,separated,keywords
+keywords: yomefm,konifar,嫁fm,こにふぁー
 language: ja
 markdown: kramdown
 permalink: /episode/:title
 sass:
   sass_dir: css
 timezone: Asia/Tokyo
-title: Example title
-url: http://example.com
+title: yome.fm
+url: https://yomefm.github.io
